new slack client

--- a/deps/jars.yml
+++ b/deps/jars.yml
@@ -4,7 +4,7 @@ repos:
     type: default
     url: http://central.maven.org/maven2/
 artifacts:  
-  - groupId: com.kifi
-    artifactId: slack-client
-    version: 0.2        
+  - groupId: com.flyberrycapital
+    artifactId: scala-slack_2.10
+    version: 0.3.0
 ...
