--- a/env/test/spark.yml
+++ b/env/test/spark.yml
@@ -1,4 +1,4 @@
-sparkOptions:
+sparkProperties:
     spark.executor.extraJavaOptions: -XX:+PrintGCDetails 
     spark.executor.memory: 1g
     spark.driver.memeory: 2g
