--- a/env/hdp/job.yml
+++ b/env/hdp/job.yml
@@ -1,5 +1,5 @@
 name: test
-master: yarn-cluster
+master: yarn-client
 inputRootPath: /apps/amaterasu/input
 outputRootPath: /apps/amaterasu/output
 workingDir: /apps/amaterasu/work_dir
